%% This file was produced by codegen/src/Packet.Sdl.CodeGen from /home/tf/src/ax25sdl/spec-sdl/v2.2-errata/data-link/yaml/disconnected.sdl.yaml
%% Do not edit by hand. Run `dotnet run --project codegen/src/Packet.Sdl.CodeGen` to regenerate.
%%
%% Source: ax.25.2.2.4_Oct_25, figure figc4.1
%% Coverage: complete
%%
%% Important: this rendering is approximate and intentionally
%% looks nothing like the original SDL figure. It is a machine-
%% generated view of the transitions in the .sdl.yaml — useful
%% for spotting transcription bugs (missing transitions, wrong
%% destination state) but NOT a substitute for reading the spec
%% figure itself. See docs/sdl-primer.md.

stateDiagram-v2
    direction LR

    classDef focal fill:#fff5b1,stroke:#b08800;
    class Disconnected focal
    Disconnected --> Disconnected: t01_dl_disconnect_request<br/>on: DL_DISCONNECT_request<br/>/ ↑ DL-DISCONNECT Confirm
    Disconnected --> Disconnected: t02_dl_unit_data_request<br/>on: DL_UNIT_DATA_request<br/>/ ↓ UI Command
    Disconnected --> AwaitingConnection: t03_dl_connect_request<br/>on: DL_CONNECT_request<br/>/ · SRT := Initial Default<br/>/ · T1V := 2 * SRT<br/>/ →() Establish_Data_Link<br/>/ · Set Layer 3 Initiated
    Disconnected --> Disconnected: t04_all_other_primitives__from_upper_layer<br/>on: all_other_primitives__from_upper_layer
    Disconnected --> Disconnected: t05_all_other_commands<br/>on: all_other_commands<br/>/ · F := P<br/>/ ↓ DM
    Disconnected --> Disconnected: t06_all_other_primitives__from_lower_layer<br/>on: all_other_primitives__from_lower_layer<br/>/ · Discard Primitive
    Disconnected --> Disconnected: t07_control_field_error<br/>on: control_field_error<br/>/ ↑ DL-ERROR Indication (L)
    Disconnected --> Disconnected: t08_info_not_permitted_in_frame<br/>on: info_not_permitted_in_frame<br/>/ ↑ DL-ERROR Indication (M)
    Disconnected --> Disconnected: t09_u_or_s_frame_length_error<br/>on: u_or_s_frame_length_error<br/>/ ↑ DL-ERROR Indication (N)
    Disconnected --> Disconnected: t10_ua_received<br/>on: UA_received<br/>/ ↑ DL-ERROR Indication (C,D)
    Disconnected --> Disconnected: t11_ui_received_no<br/>on: UI_received<br/>[not P_eq_1]<br/>/ →() UI Check
    Disconnected --> Disconnected: t11_ui_received_yes<br/>on: UI_received<br/>[P_eq_1]<br/>/ →() UI Check<br/>/ · F := 1<br/>/ ↓ DM
    Disconnected --> Disconnected: t12_disc_received<br/>on: DISC_received<br/>/ · F := P<br/>/ ↓ DM
    Disconnected --> Disconnected: t13_sabm_received_no<br/>on: SABM_received<br/>[not able_to_establish]<br/>/ · F := P<br/>/ ↓ DM
    Disconnected --> Connected: t13_sabm_received_yes<br/>on: SABM_received<br/>[able_to_establish]<br/>/ · F := P<br/>/ · set_version_2_0<br/>/ ↓ UA<br/>/ →() Clear Exception Conditions<br/>/ · V(s) := 0<br/>/ · V(a) := 0<br/>/ · V(r) := 0<br/>/ ↑ DL Connect Indication<br/>/ · SRT := Initial Default<br/>/ · T1V := 2 * SRT<br/>/ · Start T3<br/>/ · RC := 0
    Disconnected --> Disconnected: t14_sabme_received_no<br/>on: SABME_received<br/>[not able_to_establish]<br/>/ · F := P<br/>/ ↓ DM
    Disconnected --> Connected: t14_sabme_received_yes<br/>on: SABME_received<br/>[able_to_establish]<br/>/ · F := P<br/>/ · Set Version 2.2<br/>/ ↓ UA<br/>/ →() Clear Exception Conditions<br/>/ · V(s) := 0<br/>/ · V(a) := 0<br/>/ · V(r) := 0<br/>/ ↑ DL Connect Indication<br/>/ · SRT := Initial Default<br/>/ · T1V := 2 * SRT<br/>/ · Start T3<br/>/ · RC := 0
